--- a/src/app/routes/index-page/index-page.html
+++ b/src/app/routes/index-page/index-page.html
@@ -1,1 +1,8 @@
 index-page
+<avatar-list style="position: relative;" size="mini">
+    <avatar-list-item tips="Jake" src="https://gw.alipayobjects.com/zos/rmsportal/zOsKZmFRdUtvpqCImOVY.png"></avatar-list-item>
+    <avatar-list-item tips="Andy" src="https://gw.alipayobjects.com/zos/rmsportal/sfjbOqnsXXJgNCjCzDBL.png"></avatar-list-item>
+    <avatar-list-item tips="Niko" src="https://gw.alipayobjects.com/zos/rmsportal/kZzEzemZyKLKFsojXItE.png"></avatar-list-item>
+    <avatar-list-item tips="Cipchk" text="Cipchk"></avatar-list-item>
+    <avatar-list-item tips="heart-o" icon="heart-o"></avatar-list-item>
+</avatar-list>
