--- a/src/app/layout/default/footer/footer.html
+++ b/src/app/layout/default/footer/footer.html
@@ -1,4 +1,4 @@
 <div class="app-footer-container">
-    <div class="footer-item" routerLink="/index">首页</div>
+    <div class="footer-item" routerLink="/index">工单</div>
     <div class="footer-item" routerLink="/home">我的</div>
 </div>
