--- a/src/app/layout/default/header/header.html
+++ b/src/app/layout/default/header/header.html
@@ -4,7 +4,7 @@
     </div>
     <div class="header-title">测试</div>
     <div class="header-left">
-        <nz-tooltip nzPlacement="bottomRight">
+        <nz-tooltip nzPlacement="bottomRight" nzTrigger="click">
             <i nz-tooltip class="ion-ios-more"></i>
             <ng-template #nzTemplate>
                 <i class="anticon anticon-file"></i>
